--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nrwl/cypress": "^15.6.3",
     "@nrwl/eslint-plugin-nx": "15.6.3",
     "@nrwl/linter": "15.6.3",
@@ -13,6 +14,8 @@
     "@nrwl/storybook": "^15.6.3",
     "@nrwl/vite": "^15.6.3",
     "@nrwl/workspace": "15.6.3",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^6.1.2",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -49,6 +52,7 @@
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-router-dom": "6.4.3",
-    "styled-components": "5.3.6"
+    "styled-components": "5.3.6",
+    "tslib": "^2.3.0"
   }
 }
